# EEG-ML-Workflow

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/eeg_toolkit/: __init__.py  artifacts.py  features.py  modeling.py  preprocess.py  visualize_eeg.py  windowing.py
src/eeg_toolkit/pipelines/: __init__.py  calibrate.py  predict.py  train.py
