[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-personalization-toolkit"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scikit-learn",
    "brainflow",
    "matplotlib",
]

[project.scripts]
eeg-calibrate = "eeg_toolkit.pipelines.calibrate:main"
eeg-train = "eeg_toolkit.pipelines.train:main"
eeg-predict = "eeg_toolkit.pipelines.predict:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
